# dlog

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
scripts/: gen-mock.sh
src/: bitbucket.rs  config.rs  fuzzy.rs  github.rs  hours.rs  jira.rs  main.rs  pr.rs  report.rs  scanner.rs  standup.rs  store.rs  tickets.rs  tui.rs
