[package]
name = "dlog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
git2 = "0.20"
nucleo-matcher = "0.3"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
