[package]
name = "dlog"
version = "0.1.2"
edition = "2024"
description = "Personal git -> Jira daily logger (groups commits by ticket, pushes worklogs)"
license = "MIT"
repository = "https://github.com/xen0dermu3/dlog"
readme = "README.md"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
crossterm = "0.28"
directories = "5"
git2 = "0.20"
keyring = { version = "3", features = ["apple-native"] }
nucleo-matcher = "0.3"
ratatui = "0.29"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "3", features = ["json"] }
walkdir = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
